Added some description
Added media query description.

--- a/css/styles.css
+++ b/css/styles.css
@@ -178,6 +178,7 @@ color: white;
 }
 
 /* media query for title section adjustment on mobile screen */
+/*media query is required to  adjust site content according to resolution of screen*/
 @media screen and (max-width: 992px){
    #title{
     text-align: center;
